[package]
name = "fancy-regex-fork-pb"
version = "0.3.1" # remember to update html_root_url
authors = ["Phil Booth <pmbooth@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A custom fork of the fancy-regex crate. You probably don't want to use this."
readme = "README.md"
repository = "https://github.com/philbooth/fancy-regex"
documentation = "https://docs.rs/fancy-regex"
categories = ["text-processing"]

[dependencies]
regex = "1.2"
bit-set = "0.5"

[dev-dependencies]
criterion = "0.3"
matches = "0.1.8"
quickcheck = "0.7"
rand = "0.5"

[[bench]]
name = "bench"
harness = false
